# connexity-evals

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLI_README.md  CONTRIBUTING.md  LICENSE  Makefile  README-langfuse.md  README.md  docker-compose.build.yml  docker-compose.yml  pyproject.toml  release-please-config.json
.claude/: settings.json  settings.local.json
.claude/skills/commit/: SKILL.md
.claude/skills/create-pr/: SKILL.md
.claude/skills/form-dev/: SKILL.md
.claude/skills/review-task-implementation/: SKILL.md
.claude/skills/tanstack-streaming/: SKILL.md
.github/: release.yml
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  publish-docker-ghcr.yml  publish-pypi.yml  release-platform.yml  release-please.yml
backend/: Dockerfile  Dockerfile.dev  README.md  conftest.py  pyproject.toml
backend/app/: crud.py  main.py  models.py  utils.py
backend/app/alembic/: README  env.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  encryption.py  security.py
backend/app/crud/: __init__.py  agent.py  agent_version.py  call.py  custom_metrics.py  deployments.py  environments.py  eval_config.py  eval_set.py  integrations.py  prompt_editor_message.py  prompt_editor_session.py  run.py  scenario.py  scenario_result.py  scenario_set.py  test_case.py  test_case_result.py  user.py
backend/app/generator/: __init__.py  core.py  prompt.py  schemas.py
backend/app/models/: __init__.py  agent.py  agent_contract.py  agent_version.py  call.py  common.py  comparison.py  custom_metric.py  enums.py  environment.py  eval_config.py  eval_set.py  integration.py  prompt_editor.py  run.py  scenario.py  scenario_result.py  scenario_set.py  schemas.py  test_case.py  test_case_result.py  user.py
backend/app/services/: __init__.py  agent_simulator.py  agent_tool_definitions.py  analysis.py  comparison.py  cost_tracker.py  diff.py  judge.py  judge_metrics.py  llm.py  llm_models.py  metric_generator.py  orchestrator.py  predefined_metrics.py  predefined_metrics_seed.py  retell.py  run_manager.py  tool_dispatch.py  tool_executor.py  user_simulator.py
backend/app/tests/: conftest.py  test_judge_custom_metrics_resolve.py  test_prompt_editor_presets.py
backend/cli/: __init__.py  __main__.py  api_client.py  context.py  credentials.py  main.py  output.py  payload.py  resolvers.py
backend/scripts/: format.sh  lint.sh  llm_smoke.py  metric_generate_smoke.py  prestart.sh  simulate_convo.py  test_prompt_editor.py  test_run_sse.py
docs/: agent-contract.md  data-model.md  judge-criteria.md  migrations.md  platform-releases.md  pypi-publishing.md  running.md  scenario-schema.md  test-case-schema.md  vm-docker-compose.md
examples/integrations/: README.md  langchain_agent.py  raw_python_agent.py  requirements.txt
examples/mock_agent/: README.md  main.py  requirements.txt
examples/scenarios/: edge-case-empty-context.json  multi-turn-escalation.json  normal-refund-request.json  red-team-jailbreak-attempt.json  tool-heavy-order-management.json
examples/test-cases/: edge-case-empty-context.json  multi-turn-escalation.json  normal-refund-request.json  red-team-jailbreak-attempt.json  tool-heavy-order-management.json
frontend/: .gitignore  Dockerfile  package.json  pnpm-lock.yaml
scripts/: benchmark_generation.py  test_run_sse.py
(+591 files in other folders)
